# 2024_KAI_Control

./: README.md
control_setup/: 1_open_can_port.sh  2_activate_can_bridge.sh  3_activate_rosserial.sh
integrated_controller/: README.md  integrated_controller.ino
ros_kai_ws/src/can_bridge_pkg/: CMakeLists.txt  README.md  package.xml
ros_kai_ws/src/can_bridge_pkg/launch/: hardware_activate.launch
ros_kai_ws/src/can_bridge_pkg/script/: open_can_port.sh
ros_kai_ws/src/can_bridge_pkg/src/: can_bridge.cpp  can_bridge_no_estop_check.cpp
ros_kai_ws/src/custom_msg_pkg/: CMakeLists.txt  package.xml
ros_kai_ws/src/custom_msg_pkg/msg/: ControlMsg.msg  FeedbackMsg.msg
ros_kai_ws/src/custom_msg_pkg/scripts/: sine_input.py  step_input.py  tune_pid.sh  view_rqt_plot.sh
