<package format="2">
  <name>can_bridge_pkg</name>
  <version>0.0.0</version>
  <description>The can_bridge_pkg package</description>

  <maintainer email="user@example.com">Your Name</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>custom_msg_pkg</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>custom_msg_pkg</exec_depend>

  <export>
    <launch>
      <include>launch</include>
    </launch>
  </export>
</package>

